--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -19,9 +19,10 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Height of the status bar -->
+    <!-- Height of the status bar.
+        Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
+        -->
     <dimen name="status_bar_height">79px</dimen>
-    <dimen name="status_bar_height_landscape">79px</dimen>
 
     <!-- Radius of the software rounded corners. -->
     <dimen name="rounded_corner_radius">8dp</dimen>
